bugfix scrollbars by logo animation

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -9,6 +9,7 @@
   top: 0;
   background: colors.$bg-intro;
   animation: hide 0.5s 2.5s forwards;
+  z-index: 100;
 }
 
 .afterIntro {
@@ -142,7 +143,7 @@ section {
   text-align: center;
   position: relative;
   flex-wrap: nowrap;
-
+  overflow: hidden;
   &:hover {
     cursor: default;
     transition: 0.25s ease-in-out;
